fix alignment of reader header buttons

--- a/src/renderer/assets/styles/reader-app.css
+++ b/src/renderer/assets/styles/reader-app.css
@@ -250,6 +250,7 @@ button {
 
     & .menu_option {
       float: right;
+      display: flex;
 
       & > li {
         border-left: 1px solid #c1c1c1;
